assets/scss/card.scss
@import "catppucin-mocha.scss";

.card-container{
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-content: center;
  flex-direction: row;
}


.card-tag-container{
  display: flex;
  flex-wrap: wrap;
  padding-bottom: 2rem;
  align-items: center;
  justify-content: center;
}

.card {
  display: flex;
  justify-content: center;
  align-content: center;
  align-items: center;
  flex-direction: column;
  width: 25rem;
  border-radius: 10px;
  border-style: dashed;
  background-color: rgba($mocha-blue,0.2);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
  overflow: hidden;
  color: $mocha-blue;
  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
  margin: 10px;
}

.card:hover {
  transform: translateY(-5px) translateX(-5px);
  box-shadow: 0 6px 15px $mocha-peach; /* Blue shadow on hover */
  background-color: rgba($mocha-peach,0.2);
  color: $mocha-peach;
  .card-title a{
    color: $mocha-peach;
  }
  .card-title {
    color: $mocha-peach;
  }

}

/* Image inside the card */
.card-image {
  height: auto;
  max-height: 8rem;
  max-width: 18rem;
  border-radius: 8px;
  margin: 1rem;
}

/* Content inside the card */
.card-content {
  padding: 15px;
  text-wrap: wrap;
  text-align: center;
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.card-title {
  font-size: 1.5em;
  font-weight: bold;
  margin: 0 0px 10px 0;
  padding: 15px;
  text-wrap: wrap;
  text-align: center;
  font-size: 1.5rem;
  line-height: 2rem;
  color: $mocha-blue;
  a {
    color: $mocha-blue;
  }
}

.card-description {
  font-size: 1em;
  color: $mocha-teal;
  margin: 15px;
  text-align: center;
}

/* Footer with the action button */
.card-footer {
  margin: 10px;
  justify-content: center;
  display:flex;
  flex-wrap:wrap;
}

.card-footer-img{
  margin: 3px;
}

.card-button {
  padding: 10px 20px;
  background-color: $mocha-teal;
  color: $mocha-text;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.card-button:hover {
  background-color: $mocha-pink;
}

@media only screen and (max-width: 480px){

  .card {
    width: 100%;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
    overflow: hidden;
    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
    margin: 10px;
    display: flex;
  }

  .card-image {
    width: auto;
    height: auto;
    margin: 2rem;
    border-radius: 8px;
    max-height: 8rem;
    min-height: 8rem;
  }

  .card-container{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-content: center;
  }

}

.card-game-status{
  display: flex;
  height: 3rem;
  margin: 0.5rem;
  flex-direction: raw;
  justify-content: center;
  align-content: center;
  gap: 0.5rem;
}

.card-game-status-playing{
  fill: $mocha-blue;
}
.card-game-status-completed{
  fill: $mocha-green;
}
.card-game-status-shelved{
  fill: $mocha-yellow;
}
.card-game-status-abandoned{
  fill: $mocha-red;
}
.card-game-status-wishlisted{
  fill: $mocha-pink;
}

